fix scrollbar when not at 100% zoom

--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -27,6 +27,8 @@ a:visited {
   left: 0;
   right: 0;
 
+  overflow: hidden;
+
   background: $background-color;
   color: $text-color;
 
